# owg

./: .gitignore  Makefile  README.md
.github/workflows/: replay-matrix.yml
clients/web-client/: README.md  index.html  package.json
crates/owg-core/: Cargo.toml
crates/owg-core/src/: lib.rs
crates/owg-persistence/: Cargo.toml
crates/owg-physics/src/: lib.rs
crates/owg-protocol/: Cargo.toml
crates/owg-protocol/src/: lib.rs
crates/owg-server/: Cargo.toml
crates/owg-server/src/: main.rs
crates/owg-sim/: Cargo.toml
crates/owg-sim/src/: lib.rs
docs/: ARCHITECTURE.md  DETERMINISM.md  PROTOCOL.md
fixtures/test_worlds/: sample_replay.cmd.jsonl  simple_world.json
owg/: Cargo.toml
owg/crates/owg-persistence/src/: lib.rs
owg/crates/owg-physics/: Cargo.toml
owg/crates/owg-server/src/: main.rs
owg/crates/owg-sim/src/: lib.rs
owg/docs/: DETERMINISM.md
owg/fixtures/: recipes.yaml  spawn_tables.yaml
owg/fixtures/test_worlds/: simple_world.json
owg/tests/determinism/: hash_smoke.rs
tests/: protocol_smoke.rs
