[workspace]
members = [
    "crates/owg-protocol",
    "crates/owg-core",
    "crates/owg-physics",
    "crates/owg-sim",
    "crates/owg-persistence",
    "crates/owg-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OWG Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
blake3 = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
