[package]
name = "owg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
owg-sim = { path = "../owg-sim" }
owg-protocol = { path = "../owg-protocol" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
