
[package]
name = "owg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
owg-sim = { path = "../owg-sim" }
owg-protocol = { path = "../owg-protocol" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
